# renamer

./: .cargo-release.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  config.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  file_ops.rs  lib.rs  main.rs  renamer.rs  transform.rs
tests/: integration_test.rs  parallel_tests.rs
