[package]
name = "renamer"
version = "0.0.8"
edition = "2024"
description = "A Rust project for renaming files"
license = "MIT"
repository = "https://github.com/yourusername/renamer"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"
log = "0.4.14"
simplelog = "0.11.0"
anyhow = "1.0"
rayon = "1.7"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3"
